[package]
name = "usync"
version = "0.1.0"
authors = ["Elisabeth Schulz <elisabeth.schulz@codecentric.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.31.2"
ring = "0.16.9"
hex = "0.4.0"
memmap2 = "0.1.0"