[package]
name = "usync"
version = "0.1.0"
authors = ["Elisabeth Schulz <elisabeth.schulz@codecentric.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.31.2"         # Command line argument handling
ring = "0.16.9"         # Hashing
hex = "0.4.0"           # Hex codec
serde = {version = "1.0.104", features = ["derive"]}
                        # persistence of manifests
memmap = "0.7.0"        # cached mmaps for server
bincode = "1.2.1"       # binary codec for serde
glob = "0.3.0"          # glob-matching for exclude
filetime = "0.2"        # update timestamps
tempfile = "3.1.0"      # tempfiles
lazy_static = "1.4.0"